--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,3 +9,4 @@
 <%= @product.description %><br>
 <h3> Category </h3>
 <%= @product.category %><br>
+<%= button_to "Edit #{@product.name}", edit_product_path(@product), method: :get %>
