--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,15 +1,16 @@
 <h1> Welcome to Makeup App! </h1>
 
 <%= form_for @user do |f| %>
+ <%= render partial: "layouts/errors", locals: {record: @user}  %>
  <%= f.label :name %>
- <%= f.text_field :name %>
+ <%= f.text_field :name %><br>
  <%= f.label :email %>
- <%= f.email_field :email %>
+ <%= f.email_field :email %><br>
  <%= f.label :age %>
- <%= f.number_field :age %>
+ <%= f.number_field :age %><br>
  <%= f.label :password %>
- <%= f.password_field :password %>
+ <%= f.password_field :password %><br>
  <%= f.label :password_confirmation %>
- <%= f.password_field :password_confirmation %>
+ <%= f.password_field :password_confirmation %><br>
  <%= f.submit "Sign up!" %>
  <% end %>
