--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,7 +1,7 @@
 <% if record.errors.any? %>
 <ul class="errors">
-<% record.errors.each do |error| %>
-    <li><%= errors.full.message %></li>
+<% record.errors.full_messages.each do |error| %>
+    <li><%= error  %></li>
     <% end %>
     </ul>
     <% end %>
