--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -2,9 +2,13 @@
 <% if logged_in? %>
   <p>Welcome <%= current_user.name %></p>
   <%= link_to "Logout", logout_path, method: "delete" %>|
-  <%= link_to "See all products", products_path %>
-<% else %>
+  <%= link_to "See all Products", products_path %> |
+  <%= link_to "Add Product", new_product_path %> |
+  <%= link_to "Brands", brands_path %> |
+  <%= link_to "Add Brand", new_brand_path %> 
+ <% else %>
   <%= link_to "Login", login_path %> |
   <%= link_to "Sign Up!", new_user_path %>
+  
 <% end %>
 </nav>
