--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+
 <h1> Name </h1>
 <h1><%= @product.name %></h1><br>
 <h3> Price </h3>
@@ -10,3 +11,4 @@
 <h3> Category </h3>
 <%= @product.category %><br>
 <%= button_to "Edit #{@product.name}", edit_product_path(@product), method: :get %>
+<%= button_to "delete #{@product.name}", @product, method: :delete %>
