--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,3 +12,14 @@
 <%= @product.category %><br>
 <%= button_to "Edit #{@product.name}", edit_product_path(@product), method: :get %>
 <%= button_to "delete #{@product.name}", @product, method: :delete %>
+<% @product.reviews.each do |review| %>
+   <p> Review: <%= review.content %></p>
+   <p> Name: <%= review.user.name %></p>
+    <p><%= pretty_time(review.created_at) %></p>
+    <% if review.user == current_user %>
+      <%= button_to "Edit Review", edit_review_path(review), method: :get %>
+      <%= button_to "Delete Review", review, method: :delete %>
+    <% end %>
+<% end %>
+<%= render "reviews/form" %>
+  
