--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -9,6 +9,7 @@
  <% else %>
   <%= link_to "Login", login_path %> |
   <%= link_to "Sign Up!", new_user_path %>
+  <%= link_to "Sign in or Register with Google", "/auth/google_oauth2" %>
   
 <% end %>
 </nav>
