--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,7 @@
 <h1><%= @user.name %></h1>
 <p>Email: <%= @user.email %></p>
+
+<h1> Products you reviewed </h1>
+<% @user.products.each do |product| %>
+    <%= product.name %>
+    <% end %>
