--- a/app/views/brands/show.html.erb
+++ b/app/views/brands/show.html.erb
@@ -4,7 +4,7 @@
 <%= image_tag @brand.image, width: "550" %>
 <% end %>
 
-<%= link_to "Brand products", brand_products_path(@brand) %>
+<%= link_to "Brand products", brand_products_path(@brand) %><br><br>
 
-<%= button_to "Edit #{@brand.name}", edit_brand_path(@brand), method: :get %>
-<%= button_to "delete #{@brand.name}", @brand, method: :delete %>
+<button <%= button_to "Edit #{@brand.name}", edit_brand_path(@brand), method: :get %></button><br>
+<button <%= button_to "delete #{@brand.name}", @brand, method: :delete %></button>
