--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1> Welcome </h1>
+<h1> Makeup Products </h1>
 <%= form_tag products_path, method: :get do %>
     <%= label_tag :search, "Search Products" %>
     <%= text_field_tag :search, params[:search] %>
