--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -89,6 +89,11 @@
         text-decoration: underline;
       }
 
+      h2 {
+        color:  #ff69b4;
+        text-shadow: -3px 0 white, 0 3px white, 3px 0 white, 0 -3px white;
+      }
+
   
   textarea {
     width: 80%;
