--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,18 +1,18 @@
 <%= form_for @product do |f| %>
   <%= render partial: "layouts/errors", locals: {record: @product}  %>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %><br>
-    <%= f.label :price %><br>
-    <%= f.number_field :price %><br>
-    <%= f.label :details%><br>
-    <%= f.text_area :details %><br>
-    <%= f.label :description %><br>
-    <%= f.text_area :description, cols: 40, rows: 10 %><br>
-    <%= f.label :category %><br>
-    <%= f.text_field :category %><br>
-    <%= f.label :image%><br>
-    <%= f.text_field :image %><br>
-    <%= f.label :brand_id %>
-    <%= f.collection_select :brand_id, Brand.all, :id, :name %>
-    <%= f.submit %>
+    <h1><%= f.label :name %></h1>
+    <%= f.text_field :name %>
+    <h1><%= f.label :price %></h1>
+    <%= f.number_field :price %>
+    <h1><%= f.label :details%></h1>
+    <%= f.text_area :details %>
+    <h1><%= f.label :description %></h1>
+    <%= f.text_area :description, cols: 40, rows: 10 %>
+    <h1><%= f.label :category %></h1>
+    <%= f.text_field :category %> 
+    <h1><%= f.label :image%></h1>
+    <%= f.text_field :image %>  
+    <h1><%= f.label :brand_id %></h1>
+    <%= f.collection_select :brand_id, Brand.all, :id, :name %><br>
+    <h2><%= f.submit %></h2>
   <% end %>
