--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,11 @@
  */
 
  body {
+   background: black;
+
+   min-height: 500px;
+   background-size: cover;
+   background-attachment: fixed;
     text-align: center;
     color: white;
     background-color: black;
@@ -36,7 +41,6 @@
   .card h1 {
     font-size: 1.25em;
   }
-  
   .new_review, .edit_review {
     margin-left: 30%;
     min-width: 300px;
@@ -46,15 +50,49 @@
     margin-bottom: .3em;
     margin-top: .3em;
   }
-  
+
   
   input {
     display: block;
     margin: .5em auto;
   }
-  
 
-  
+  header {
+    background: #ff69b4;
+  }
+
+  header::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+  nav {
+     float: right;
+  }
+
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  nav li {
+    display: inline-block;
+    margin-left: 10px;
+    padding-top: 15px;
+  }
+ 
+  nav a {
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+ .makeup_logo {
+   width:100px;
+   float: left;
+ }
+
   
   .card img {
     width: 300px;
@@ -77,17 +115,16 @@
   }
 
   button {
-    padding: 10px;
-       background-color:  #ff69b4;
+    padding: 0px;
+       background-color: #ff69b4;
        text-align: end;
      }  
-
      button input {
-        background-color: #ff69b4;
-        border: none;
-        color: blue;
-        text-decoration: underline;
-      }
+      background-color: #ff69b4;
+      border: none;
+      color: black;
+      text-decoration: underline;
+    }
 
       h2 {
         color:  #ff69b4;
