--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,17 +1,18 @@
 <nav>
 <% if logged_in? %>
-  <h1><p>Welcome <%= current_user.name %></p></h1>
-  <%= link_to "My profile", current_user %>|
-  <%= link_to "Logout", logout_path, method: "delete" %>|
-  <%= link_to "See all Products", products_path %> |
-  <%= link_to "Add Product", new_product_path %> |
-  <%= link_to "Brands", brands_path %> |
-  <%= link_to "Add Brand", new_brand_path %> 
-  
- <% else %>
-  <%= link_to "Login", login_path %> |
-  <%= link_to "Sign Up!", new_user_path %>
-  <%= link_to "Sign in or Register with Google", "/auth/google_oauth2" %>
-  
-<% end %>
+
+<ul>
+    <li><%= link_to "My profile", current_user %></li>
+    <li><%= link_to "Logout", logout_path, method: "delete" %></li>
+    <li><%= link_to "See all Products", products_path %></li> 
+    <li><%= link_to "Add Product", new_product_path %></li>           
+    <li><%= link_to "Brands", brands_path %></li>
+    <li><%= link_to "Add Brand", new_brand_path %></li>
+    
+  <% else %>
+    <li><%= link_to "Login", login_path %></li>
+    <li><%= link_to "Sign Up!", new_user_path %></li>
+    <li><%= link_to "Sign in or Register with Google", "/auth/google_oauth2" %></li>
+ <% end %>
+ </ul>
 </nav>
