--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,6 +8,7 @@
     <li><%= link_to "Add Product", new_product_path %></li>           
     <li><%= link_to "Brands", brands_path %></li>
     <li><%= link_to "Add Brand", new_brand_path %></li>
+    <li><%= link_to "All Reviews", reviews_path %></li>
     
   <% else %>
     <li><%= link_to "Login", login_path %></li>
